# fanboy

./: README.md  meson.build
data/: com.github.nwallace.fanboy.desktop  com.github.nwallace.fanboy.gresource.xml
data/ui/: application-window.ui  main-menu.ui  title-list-item.ui  tournament-list-item.ui  tournament.ui  web-image.ui
docs/en/dev/: builds.md
po/: POTFILES  com.github.nwallace.fanboy.pot  en.po
src/: Application.vala  controller.vala  main.vala
src/controllers/: tournaments.vala
src/models/: title.vala  tournament.vala
src/remotes/: client.vala  response.vala  titles.vala  tournaments.vala
src/ui/: application-window.vala  application.vala  main-menu.vala  title-list-item.vala  tournament-list-item.vala  tournament.vala  web-image.vala
src/utils/: images.vala
